--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="hehehe"></div>
     <div id="modal"></div>
     <div id="navBar"></div>
+    <div id="cardDetails"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
