--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
-  <body>
+  <body class="relative">
     <div id="root"></div>
+    <div id="menuSide"></div>
     <div id="hehehe"></div>
     <div id="modal"></div>
     <div id="navBar"></div>
