slider animado, search y menu terminado - se removio los portales

--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
-  <body class="relative">
+  <body class="">
     <div id="root"></div>
     <div id="menuSide"></div>
-    <div id="hehehe"></div>
-    <div id="modal"></div>
-    <div id="navBar"></div>
-    <div id="cardDetails"></div>
+    <div id="hehehe" ></div>
+    <div id="modal" ></div>
+    <div id="navBar" ></div>
+    <div id="cardDetails" ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
