--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <link rel="stylesheet" href="https://static.micuentaweb.pe/static/js/krypton-client/V4.0/ext/classic-reset.css">
+      <!-- Estilos de la pasarela de pagos -->
+<!--      <link rel="stylesheet" href="https://static.micuentaweb.pe/static/js/krypton-client/V4.0/ext/classic-reset.css">-->
+<!--      <script src="https://static.micuentaweb.pe/static/js/krypton-client/V4.0/ext/classic.js"></script>-->
+
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SuperFruits</title>
   </head>
   <body class="">
     <div id="root"></div>
